--- a/public/stat120/Day10.html
+++ b/public/stat120/Day10.html
@@ -121,7 +121,7 @@ letter.
 .out-t[How often did you guess correctly?]
 ]
 
-<div class="countdown" id="timer_ef2b5a15" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_e84b7bfd" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -319,7 +319,9 @@ Let `\(\mu_{\mathrm{s}}\)` and `\(\mu_{\mathrm{c}}\)` be the mean number of word
   4. `\(\mathrm{H}_{0}: \mu_{\mathrm{s}}=\mu_{\mathrm{c}}, \mathrm{H}_{\mathrm{a}}: \mu_{\mathrm{s}}&gt;\mu_{\mathrm{c}}\)`
   5. `\(\mathrm{H}_{0}: \mu_{\mathrm{s}}=\mu_{\mathrm{c}}, \mathrm{H}_{\mathrm{a}}: \mu_{\mathrm{s}}&lt;\mu_{\mathrm{c}}\)`
 ]
+
 &lt;br&gt;
+
 &lt;details&gt;
 &lt;summary&gt;.red[Click for answer]&lt;/summary&gt;
 The correct answer is 2 (since we are looking for evidence that the means are different)
@@ -370,7 +372,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_21549c8a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_05947a86" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
