--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -60,7 +60,8 @@
   
     
   
-  <meta name="description" content="Day 10 Slides (pdf/html)" />
+  <meta name="description" content="Day 10 Slides (pdf/html)
+Day 11 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week4/" />
@@ -304,7 +305,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week4/" />
   <meta property="og:title" content="Week 4 | Deepak Bastola" />
-  <meta property="og:description" content="Day 10 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 10 Slides (pdf/html)
+Day 11 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -799,6 +801,7 @@
 
           <div class="article-style">
             <p>Day 10 Slides (<a href="/stat220/Day10.pdf" target="_blank">pdf</a>/<a href="/stat220/Day10.html" target="_blank">html</a>)</p>
+<p>Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>)</p>
 
           </div>
 
