--- a/static/stat220/Day10.html
+++ b/static/stat220/Day10.html
@@ -245,11 +245,21 @@ mydata &lt;- tibble(
 
 mydata &lt;- mydata %&gt;%
 * mutate(grade_fac = fct_rev(grade_fac))
-
-levels(mydata$grade_fac)
-[1] "9th"  "11th" "10th"
 ```
 
+
+
+```r
+mydata %&gt;% 
+  arrange(grade_fac)
+# A tibble: 4 × 3
+     id grade grade_fac
+  &lt;int&gt; &lt;chr&gt; &lt;fct&gt;    
+1     1 9th   9th      
+2     4 9th   9th      
+3     3 11th  11th     
+4     2 10th  10th     
+```
 
 ---
 
@@ -326,7 +336,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_563cf5eb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_65f9f358" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -578,7 +588,7 @@ gss_cat %&gt;%
 
 ## Why is the y-axis in this order?
 
-&lt;img src="Day10_files/figure-html/unnamed-chunk-12-1.svg" width="62%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Day10_files/figure-html/unnamed-chunk-13-1.svg" width="62%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -8024,7 +8034,7 @@ gss_cat %&gt;%
 ## Which political leaning watches more TV?
 
 
-&lt;img src="Day10_files/figure-html/unnamed-chunk-13-1.svg" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Day10_files/figure-html/unnamed-chunk-14-1.svg" width="50%" style="display: block; margin: auto;" /&gt;
 
 --
 
@@ -8881,7 +8891,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_e4266207" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_e197ca24" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
