--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -709,6 +709,10 @@ Day 9 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
       
 
 
+  <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
 
 
