--- a/static/stat220/Day14.html
+++ b/static/stat220/Day14.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 # .fancy[Functions]
 
-### .fancy[Fall 2022]
+### .fancy[Spring 2023]
 
  April 26 2023
 
@@ -327,7 +327,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_2daa3b73" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_c5a4a26d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -777,18 +777,18 @@ text_data %&gt;%
 ```r
 stop_words %&gt;% sample_n(10)
 # A tibble: 10 × 2
-   word       lexicon 
-   &lt;chr&gt;      &lt;chr&gt;   
- 1 herself    SMART   
- 2 available  SMART   
- 3 downed     onix    
- 4 themselves SMART   
- 5 turns      onix    
- 6 took       SMART   
- 7 again      snowball
- 8 being      SMART   
- 9 they'd     SMART   
-10 we'll      SMART   
+   word      lexicon 
+   &lt;chr&gt;     &lt;chr&gt;   
+ 1 although  SMART   
+ 2 very      snowball
+ 3 regarding SMART   
+ 4 must      onix    
+ 5 looks     SMART   
+ 6 most      SMART   
+ 7 looking   SMART   
+ 8 above     onix    
+ 9 someone   SMART   
+10 latterly  SMART   
 ```
 
 
@@ -3922,7 +3922,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_3110b09e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_845964d3" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
