--- a/static/stat120/Day14.html
+++ b/static/stat120/Day14.html
@@ -163,7 +163,7 @@ If the new drug has potentially serious side effects, we should pick a significa
 .hljs[
 A. Relatively small (such as `\(1 \%\)` )
 
-B. Middle of the road ($5\%$)
+B. Middle of the road ( `\(5\%\)` )
 
 C. Relatively large (such as `\(10 \%\)` )
 
@@ -442,7 +442,7 @@ class: action
 
 ]
 
-<div class="countdown" id="timer_31e2e0bf" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_bb21ec21" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
