--- a/public/courses/stat120/week5/index.html
+++ b/public/courses/stat120/week5/index.html
@@ -61,7 +61,8 @@
     
   
   <meta name="description" content="Day 13 Slides (pdf/html)
-Day 14 Slides (pdf/html)" />
+Day 14 Slides (pdf/html)
+Day 15 Slides (pdf)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week5/" />
@@ -306,7 +307,8 @@ Day 14 Slides (pdf/html)" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week5/" />
   <meta property="og:title" content="Week 5 | Deepak Bastola" />
   <meta property="og:description" content="Day 13 Slides (pdf/html)
-Day 14 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 14 Slides (pdf/html)
+Day 15 Slides (pdf)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -798,6 +800,7 @@ Day 14 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.n
           <div class="article-style">
             <p>Day 13 Slides (<a href="/stat120/Day13.pdf" target="_blank">pdf</a>/<a href="/stat120/Day13.html" target="_blank">html</a>)</p>
 <p>Day 14 Slides (<a href="/stat120/Day14.pdf" target="_blank">pdf</a>/<a href="/stat120/Day14.html" target="_blank">html</a>)</p>
+<p>Day 15 Slides (<a href="/stat120/Day15.pdf" target="_blank">pdf</a>)</p>
 
           </div>
 
