--- a/public/courses/stat120/week4/index.html
+++ b/public/courses/stat120/week4/index.html
@@ -707,6 +707,10 @@ Day 12 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.n
       
 
 
+  <li class=""><a href="/courses/stat120/week6/">Week 6</a></li>
+
+
+
   <li class=""><a href="/courses/stat120/week5/">Week 5</a></li>
 
 
