--- a/static/stat120/Day17.html
+++ b/static/stat120/Day17.html
@@ -53,7 +53,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- May 04 2023
+ May 05 2023
 
 
 ---
@@ -423,7 +423,7 @@ Let's go over to the class activity .Rmd file and complete the tasks for today.
 
 ]
 
-<div class="countdown" id="timer_f6051aab" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_695d6aaf" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
