--- a/static/stat220/Day23.html
+++ b/static/stat220/Day23.html
@@ -118,7 +118,7 @@ class: middle
 &lt;img src="Day23_files/figure-html/unnamed-chunk-4-1.svg" width="75%" style="display: block; margin: auto;" /&gt;
 
 .hljs.purple[
-- Based on accuracy, `\(k=7\)` appears best, We C=can look at other metrics. Notice that accuracy doesn't always decrease with `\(k\)`
+- Based on accuracy, `\(k=6\)` appears best, We can look at other metrics. Notice that accuracy doesn't always decrease with `\(k\)`
 ]
 
 ---
@@ -281,7 +281,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_fdb87128" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_985bf47c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -561,7 +561,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_81a78074" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_b1acb4db" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
