--- a/static/stat120/Day24.html
+++ b/static/stat120/Day24.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- May 21 2023
+ May 22 2023
 
 ---
 
@@ -272,7 +272,9 @@ Cuckoo &lt;- Cuckoo %&gt;%
 
 stat &lt;- Cuckoo %&gt;%
   group_by(species) %&gt;%  # group by type
-* summarize(mean(length), sd(length), length(length))   # summarize various info
+* summarize(mean = mean(length),
+*           sd = sd(length),
+*           n = length(length))
 ```
 ]
  
@@ -294,8 +296,10 @@ Cuckoo &lt;- Cuckoo %&gt;%
 
 stat &lt;- Cuckoo %&gt;%
   group_by(species) %&gt;%  # group by type
-  summarize(mean(length), sd(length), length(length)) %&gt;%  # summarize various info
-* `colnames&lt;-`(c( "type", "mean", "sd", "n"))   # change column names
+  summarize(mean = mean(length),
+            sd = sd(length),
+            n = length(length)) %&gt;%
+* as.data.frame()
 ```
 ]
  
@@ -317,40 +321,17 @@ Cuckoo &lt;- Cuckoo %&gt;%
 
 stat &lt;- Cuckoo %&gt;%
   group_by(species) %&gt;%  # group by type
-  summarize(mean(length), sd(length), length(length)) %&gt;%  # summarize various info
-  `colnames&lt;-`(c( "type", "mean", "sd", "n")) %&gt;%  # change column names
-*  as.data.frame()  # change it to a data frame
-```
-]
- 
-.panel2-cuckoo-auto[
-
-]
-
----
-count: false
- 
-## ANOVA
-.panel1-cuckoo-auto[
-
-```r
-library(dplyr)
-Cuckoo &lt;- read.csv("https://raw.githubusercontent.com/deepbas/stat120datasets/main/cuckoos.csv")
-Cuckoo &lt;- Cuckoo %&gt;%
-  mutate(species = as.factor(species))  # change species to a categorical variable
-
-stat &lt;- Cuckoo %&gt;%
-  group_by(species) %&gt;%  # group by type
-  summarize(mean(length), sd(length), length(length)) %&gt;%  # summarize various info
-  `colnames&lt;-`(c( "type", "mean", "sd", "n")) %&gt;%  # change column names
-   as.data.frame()  # change it to a data frame
+  summarize(mean = mean(length),
+            sd = sd(length),
+            n = length(length)) %&gt;%
+  as.data.frame()
 *knitr::kable(stat)
 ```
 ]
  
 .panel2-cuckoo-auto[
 
-|type          |     mean|        sd|  n|
+|species       |     mean|        sd|  n|
 |:-------------|--------:|---------:|--:|
 |hedge.sparrow | 23.11429| 1.0494373| 14|
 |meadow.pipit  | 22.29333| 0.9195849| 45|
@@ -1129,7 +1110,7 @@ knitr::kable(tidy(fit_anova))
 .pull-right-40[
 .font80[
 
-|type          |     mean|        sd|  n|
+|species       |     mean|        sd|  n|
 |:-------------|--------:|---------:|--:|
 |hedge.sparrow | 23.11429| 1.0494373| 14|
 |meadow.pipit  | 22.29333| 0.9195849| 45|
@@ -1181,7 +1162,7 @@ Find a 95% CI for the difference in mean egg length between .b[European robin](t
 .pull-right-40[
 .font80[
 
-|type          |     mean|        sd|  n|
+|species       |     mean|        sd|  n|
 |:-------------|--------:|---------:|--:|
 |hedge.sparrow | 23.11429| 1.0494373| 14|
 |meadow.pipit  | 22.29333| 0.9195849| 45|
@@ -1226,7 +1207,7 @@ Find a 95% CI for the difference in mean egg length between .b[European robin](t
 .pull-right-40[
 .font80[
 
-|type          |     mean|        sd|  n|
+|species       |     mean|        sd|  n|
 |:-------------|--------:|---------:|--:|
 |hedge.sparrow | 23.11429| 1.0494373| 14|
 |meadow.pipit  | 22.29333| 0.9195849| 45|
@@ -1325,7 +1306,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_aae017a7" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_b270aba4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
