--- a/public/courses/stat220/data/index.html
+++ b/public/courses/stat220/data/index.html
@@ -711,6 +711,10 @@ More Tricky Data file" /><meta property="og:image" content="https://deepbas.netl
       
 
 
+  <li class=""><a href="/courses/stat220/week10/">Week 10</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
 
 
