--- a/public/courses/stat120/index.html
+++ b/public/courses/stat120/index.html
@@ -700,6 +700,10 @@
       
 
 
+  <li class=""><a href="/courses/stat120/week10/">Week 10</a></li>
+
+
+
   <li class=""><a href="/courses/stat120/week9/">Week 9</a></li>
 
 
