--- a/public/courses/stat120/week5/index.html
+++ b/public/courses/stat120/week5/index.html
@@ -709,6 +709,10 @@ Day 15 Slides (pdf)" /><meta property="og:image" content="https://deepbas.netlif
       
 
 
+  <li class=""><a href="/courses/stat120/week10/">Week 10</a></li>
+
+
+
   <li class=""><a href="/courses/stat120/week9/">Week 9</a></li>
 
 
