--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -721,6 +721,10 @@ leaflet Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify
       
 
 
+  <li class=""><a href="/courses/stat220/week10/">Week 10</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
 
 
