--- a/public/stat120/Day2.html
+++ b/public/stat120/Day2.html
@@ -15,8 +15,8 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/xaringanExtra-extra-styles/xaringanExtra-extra-styles.css" rel="stylesheet" />
     <script>window.xaringanExtraClipboard(null, {"button":"<i class=\"fa fa-clipboard\"><\/i>","success":"<i class=\"fa fa-check\" style=\"color: #90BE6D\"><\/i>","error":"<i class=\"fa fa-times-circle\" style=\"color: #F94144\"><\/i>"})</script>
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
     <script src="libs/countdown/countdown.js"></script>
     <script src="https://use.fontawesome.com/5235085b15.js"></script>
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- March 28 2023
+ September 13 2023
 
 ---
 
@@ -191,13 +191,17 @@ class: action, middle
 &lt;br&gt;
 &lt;br&gt;
 .bql[
-- Go to the [google form](https://forms.gle/bsehnokiTrB4pWPb6)
 
-- Find the average word length and enter your answer
+Go to 
+
+  * [google form for section 01](https://forms.gle/H5bwYijgoZ1B2xco7)
+  * [google form for section 02](https://forms.gle/Cj2x7xv8iubsFzaa9)
+
+Find the average word length and enter your answer
 ]
 ]
 
-<div class="countdown" id="timer_d55123ea" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_e92fc4cf" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -261,11 +265,11 @@ class: middle
 
 class: action
 
-# [Danish study](https://onlinelibrary.wiley.com/doi/abs/10.1111/padm.12688): Question order bias
+# [Swedish Study](https://link.springer.com/article/10.1007/s11109-020-09630-5): Response bias
 
 
 &lt;center&gt;
-&lt;img src="images/abstract.png" width="80%" height="55%"&gt; &lt;br&gt;
+&lt;img src="images/swedish_study.png" width="70%" height="50%"&gt; &lt;br&gt;
 &lt;/center&gt;
 
 ---
@@ -273,14 +277,13 @@ class: action
 class: middle
 
 
-# Danish Study
+# Identified Sources of Bias in `Swedish Study`
 
-&gt; Danish policy makers found out in the [study](https://onlinelibrary.wiley.com/doi/abs/10.1111/padm.12688) that order bias exists in Danish Public Services
 
-.font90[
-- When asked about overall satisfaction before being asked about specific services, the overall satisfaction was low.
+.bq.font90[
+`Political Bias:` The study experimentally primes the political affiliations of the respondents before asking questions about corruption. This bias arises when people's political leanings affect their perception and reporting of corruption levels.
 
-- When asked about overall satisfaction after being asked about specifc services, then the overall satifaction was high.
+`Sensitivity Bias:` Questions about one's experiences with corruption are sensitive in nature and may result in biased responses due to fear of retribution or social stigma.
 ]
 
 ---
@@ -320,7 +323,7 @@ class: middle
 - There is general unwillingness due to polar opposite opinions
 - The survey did not reach the right respondent
 
-.blue-h[e.g. A survey asking teenagers about best cigarette brands. Spam emails is also a prime reason for non-response bias]
+.blue-h[e.g. A survey asking teenagers about best cigarette brands.]
 
 ---
 
@@ -335,14 +338,15 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 &lt;br&gt;
-.bq[
+.bq.font80[
 
-- Go over to [moodle](https://moodle.carleton.edu/login/index.php) to get the class activity .Rmd file
-- Continue working with your neighbors and let me know of you have any questions
+- Identify one source of bias based on [The Effect of Question Order on Evaluations of Test Performance: Can the Bias Dissolve?](https://journals.sagepub.com/doi/full/10.1080/17470218.2016.1225108)
+
+- (Time permitting) Go over to [moodle](https://moodle.carleton.edu/login/index.php) to get the practice_template.Rmd file and work on a few problems together
 ]
 ]
 
-<div class="countdown" id="timer_abfeacf4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_dd32df33" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
